themes/hugo-creative-theme/static/css/creative.css
/* ... */
img.img-responsive.silver-sponsor-logos {
  display: block;
  width: auto;
  height: 100px;
  margin: 10px auto;
}

img.img-responsive.venue-sponsor-logos {
  display: block;
  width: auto;
  max-width: 350px;
  height: 100px;
  margin: 0 auto;
}

.sponsor-row {
  margin-top: 140px;
  margin-bottom: 250px;
}

#partners {
  background: #EDEDED;
}

.speaker-mul {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  -ms-flex-align: center;
  -webkit-box-align: center;
  align-items: center;
}

.speaker-mul:last-child::before {
  content: "and";
  padding: 0 1.5em;
}

.speaker {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  -ms-flex-align: center;
  -webkit-box-align: center;
  align-items: center;
  padding-top: 55px;
  margin-bottom: 20px;
}

.speaker-img {
  width: 170px;
  height: 170px;
  border-radius: 50%;
  overflow: hidden;
  margin: 0 auto;
}

.speaker-img-xs {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  overflow: hidden;
  margin: 0 1.5em 0 0;
}

img.speaker-img-responsive {
  display: block;
  width: 100%;
  height: auto;
}

.timeline .speaker-img {
  margin: 0 1.5em 0 0;
}

.speaker-name a {
  font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
  font-weight: 700;
  font-size: 1.5em;
  color: #1da79d;
  padding-bottom: 0.5em;
}

.speaker-caption {
  color: #7e7e7e;
  font-size: 1.2em;
  padding-bottom: 0.5em;
}

.speaker-bio {
  padding-bottom: 0.5em;
  font-size: 16px;
}

.speaker-talk-link a {
  text-decoration: none;
  font-size: 1.4em;
  color: #2a70c6;
}

.speaker-bio-link a {
  text-decoration: underline;
  color: #2a70c6;
  font-size: 1em;
}

.keynote-tag {
  font-size: 1.1em;
  color: #a69225;
}

.single {
  position: relative;
  display: block;
  min-height: 100%;
}

.schedule-date-block {
  padding-top: 0.5em;
  margin: 0 auto 2em auto;
  text-align: center;
}

.schedule-date-block hr {
  max-width: 120px;
  border-width: 2px;
  margin: 0.5em auto;
  border-color: #2a70c6;
}

.schedule-day {
  font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
}

.schedule-event {
  font-weight: 500;
  font-size: 18px;
}

.schedule-notes {
  margin-top: 1.3em;
  font-style: italic;
}

h2.timeline-header {
  font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 600;
  font-size: 2em;
  margin: 0 0 1em 0;
}

h4.timeline-sub-header {
  font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 600;
  margin: 0 0 1em 0;
}

h4.timeline-mono-header {
  font-family: 'Source Code Pro', 'Inconsolata', 'Courier', monospace;
  font-weight: 600;
  margin: 0 0 1em 0;
}

.timeline {
  position: relative;
}

.timeline:before {
  content: '';
  position: absolute;
  top: 0;
  left: 20%;
  background: #272727;
  width: 1px;
  height: 100%;
}

.timeline-point {
  position: absolute;
  width: 15px;
  height: 15px;
  background-color: #272727;
  border-radius: 50%;
  left: 20%;
  margin-top: 2px;
  margin-left: -7.5px;
}

@media(min-width: 992px) {
  .timeline:before {
    left: 10%;
  }
  .timeline-point {
    left: 10%;
  }
}

.timeline-block {
  padding: 1em 0;
}

.timeline-time, .timeline-event {
  padding: 0;
}

.timeline-time {
  font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
  color: #36bfbe;
  padding-right: 5em;
}

h4.timeline-sub-block-header {
  font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 600;
  font-size: 1.3em;
  margin: 2em 0 0.8em 0;
}

.talk-block p.text-muted {
  padding-bottom: 1em;
  margin: 0;
}

.location-block {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  -ms-flex-align: center;
  -webkit-box-align: center;
      align-items: center;
  margin-bottom: 2em;
}

.location-map {
  max-width: 650px;
}

.speaker-block {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -ms-flex-align: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-pack: start;
  -webkit-box-pack: start;
  justify-content: flex-start;
}

.speaker-brand {
  text-align: center;
}

.speaker-brand .speaker-name {
  color: #2a70c6;
  font-size: 1.5em;
  margin-bottom: 1.2em;
}

.speaker-block .speaker-bio {
  margin-top: 1.2em;
}

.location-svg-icon {
  width: 24px;
  height: 32px;
  margin-right: 1.5em;
}

.gopher-footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 196px;
}

.small-text {
  font-size: 12px;
}

.medium-text {
  font-size: 13px;
}

.credit-text a {
  color: #fff;
}

.social-links p {
  display: inline;
}

.no-padding {
    padding: 0;
}

.gopher-nav {
  background: white;
  width: 100%;
}

.navbar-default {
    border-color: rgba(34,34,34,.05);
    font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
    background-color: #fff;
    -webkit-transition: all .35s;
    transition: all .35s;
}

.navbar-default .navbar-header .navbar-brand {
    text-transform: uppercase;
    font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
    font-weight: 700;
    color: #e84661;
}

.navbar-default .navbar-header .navbar-brand:hover,
.navbar-default .navbar-header .navbar-brand:focus {
    color: #e84661;
}

.navbar-default .nav > li>a,
.navbar-default .nav>li>a:focus {
    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
    font-size: 1em;
    font-weight: 400;
    color: #e84661;
}

.navbar-default .nav > li>a:hover,
.navbar-default .nav>li>a:focus:hover {
    color: #fff;
    background: #e84661;
}

.navbar-default .nav > li.active>a,
.navbar-default .nav>li.active>a:focus {
    color: #fff!important;
    background-color: #e84661;
}

.navbar-default .nav > li.active>a:hover,
.navbar-default .nav>li.active>a:focus:hover {
    color: #fff!important;
    background-color: #e84661;
}

.navbar-default .nav .open>a,
.navbar-default .nav .open>a:focus {
    color: #e78a99;
    background-color: #ededed;
}
/* ... */

